# rule_oras

./: LICENSE  README.md  WORKSPACE  example.cquery
examples/: BUILD.bazel  deps.impl
oras/: BUILD.bazel  def.bzl  deps.bzl
oras/private/: BUILD.bazel  platforms.bzl  repositories.bzl  rules.bzl  toolchain.bzl
oras/toolchains/: BUILD.bazel
