load("//oras:def.bzl", "oci_artifact")

oci_artifact(
    name = "artifact_deps",
    srcs = glob(["*.impl"]),
    registry = "localhost:5001",
    repository = "artifact-deps",
    tag = "v2",
)

oci_artifact(
    name = "hello-artifact",
    srcs = glob(["*.txt"]),
    dependencies = [":artifact_deps"],
    registry = "localhost:5001",
    repository = "hello-artifact",
    tag = "v2",
)

