load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "oras.sh.tpl",
    "oras_test.sh.tpl"
])

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//oras:__subpackages__"],
    # Don't list dependency on @bazel_tools//tools/build_defs/repo:http.bzl
    deps = [
        ":platforms",
    ],
)

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    visibility = ["//oras:__subpackages__"],
    deps = [
        ":platforms",
    ],
)

bzl_library(
    name = "platforms",
    srcs = ["platforms.bzl"],
    visibility = ["//oras:__subpackages__"],
    deps = [],
)
